// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`metatext snapshots Metatext: 0 1`] = `
<span
  className="typography-0-1-2 typography__7-0-1-9 metatext-0-1-12"
>
  Metatext test string
</span>
`;

exports[`metatext snapshots Metatext: 1 1`] = `
<p
  className="typography-0-1-14 typography__7-0-1-21 metatext-0-1-24"
  data-sketch-symbol="Metatext"
>
  Metatext test string
</p>
`;

exports[`metatext snapshots Metatext: 2 1`] = `
<span
  className="typography-0-1-26 typography__7-0-1-33 metatext-0-1-36"
>
  Metatext test string
</span>
`;
